# t-game-sdk

./: README.md
ShopSDK/: README.txt
ShopSDK/sdk/Android/: GooFishShop-release1.0.10.aar  GooFishShop-release1.0.13.aar
ShopSDK/sdk/iOS/Jenova4iPhoneH5.framework/Jenova4iPhoneH5.framework/: Assets.car  Info.plist  Jenova4iPhoneH5  error.html  rotation_tips.html  userData.json
ShopSDK/任务及UI配置示例/sdk_config/: sdk_config.json
ShopSDK/美术资源规范及示例/: 1banner规范.psd
TBJGameSDK/include/: TBJGameEnviroment.h  TBJGameHttp.h  TBJGameImage.h  TBJGameMacro.h
TBJGameSDK/include/AK/Comm/: AkCommunication.h
TBJGameSDK/include/AK/SoundEngine/Common/: AkCallback.h  AkCommonDefs.h  (+1 more)
TBJGameSDK/include/android/: log.h
TBJGameSDK/include/android_sysroot/: jni.h
TBJGameSDK/include/android_sysroot/SLES/: OpenSLES.h
TBJGameSDK/include/android_sysroot/android/: log.h
TBJGameSDK/include/android_sysroot/windows/: AkDefaultIOHookBlocking.h  assert.h  pthread.h  semaphore.h
TBJGameSDK/simulator/: CMakeLists.txt  Queue.h  SpinLock.h  TBJAppController.h  TBJAppController.mm  TBJAppFrameworkInternal.h  TBJEnvContext.cpp  TBJEnvContext.h  TBJGameFS.cpp  TBJGameFS.h  TBJGameFSTest.cpp  TBJGameHttpTask.h  TBJGameHttp_Internal.cpp  TBJGameHttp_Internal.h  TBJGameImage.cpp  TBJGameImageInternal.cpp  TBJGameImageInternal.h  TBJGameInstance.cpp  TBJGameInstance.h  TBJGameInviroment.mm  TBJGameView.h  TBJGameView.mm  TBJHttpCallbackManager.cpp  TBJHttpCallbackManager.h  TBJStorageContext.cpp  TBJStorageContext.h  TBJViewController.h  TBJViewController.mm  TBJWWise.cpp  TBJWWiseTest.cpp  get_simulator_thirdparty.py  ios.toolchain.cmake  main.cpp  wwise_api_modifier.py
TBJGameSDK/simulator/IOS/: TBJGameHttpDelegate.h  TBJGameHttpDelegate.mm
TBJGameSDK/simulator/TBJGameFSTest/: CMakeLists.txt
TBJGameSDK/simulator/include/AK/: AkPlatforms.h  AkWwiseSDKVersion.cs  AkWwiseSDKVersion.h  IBytes.h
TBJGameSDK/simulator/include/AK/Plugin/: AkSineSourceFactory.h  AkToneSourceFactory.h
TBJGameSDK/simulator/include/AK/SoundEngine/Common/: AkMemoryMgr.h  AkSoundEngine.h  AkSoundEngineExport.h  AkTypes.h  IAkRTPCSubscriber.h  IAkStreamMgr.h
TBJGameSDK/simulator/include/AK/SoundFrame/: SF.h
TBJGameSDK/simulator/include/AK/Tools/Common/: AkAssert.h
TBJGameSDK/simulator/include/AK/Tools/POSIX/: AkPlatformFuncs.h
TBJGameSDK/simulator/include/AK/Tools/Win32/: AkLock.h
TBJGameSDK/simulator/include/AK/Wwise/: AudioPlugin.h  Undo.h  Utilities.h
TBJGameSDK/simulator/samples/IntegrationDemo/Android/: .cproject  .project  AndroidManifest.xml  Drawing.cpp  FreetypeGraphicRenderer.cpp  FreetypeGraphicRenderer.h  InputMgr.cpp  InputMgr.h  Platform.cpp  Platform.h  Stdafx.h  build.xml
TBJGameSDK/simulator/samples/IntegrationDemo/Android/jni/: Android.mk  Application.mk  IntegrationDemo.cpp  main.cpp
TBJGameSDK/simulator/samples/IntegrationDemo/Common/: Helpers.cpp  Helpers.h  IntegrationDemo.cpp  IntegrationDemo.h  SoundInputBase.cpp  SoundInputBase.h  SoundInputMgrBase.cpp  SoundInputMgrBase.h  stdafx.cpp
TBJGameSDK/simulator/samples/IntegrationDemo/DemoPages/: BaseMenuPage.cpp  BaseMenuPage.h  DemoBGM.cpp  DemoBGM.h  DemoDialogueMenu.cpp  DemoDialogueMenu.h  DemoDynamicDialogue.cpp  DemoDynamicDialogue.h  DemoExternalSources.cpp  DemoExternalSources.h  DemoFootstepsManyVariables.cpp  DemoFootstepsManyVariables.h  DemoInteractiveMusic.cpp  DemoInteractiveMusic.h  DemoLocalization.cpp  DemoLocalization.h  DemoMarkers.cpp  DemoMarkers.h  DemoMicrophone.cpp  DemoMicrophone.h  DemoMotion.cpp  DemoMotion.h  DemoMusicCallbacks.cpp  DemoMusicCallbacks.h  DemoPositioning.cpp  DemoPositioning.h  DemoRTPCCarEngine.cpp  DemoRTPCCarEngine.h  MenuPages.h
TBJGameSDK/simulator/samples/IntegrationDemo/MenuSystem/: ButtonControl.cpp  ButtonControl.h  Control.cpp  Control.h  Drawing.h  Menu.cpp  Menu.h  MenuControls.h  MessagePage.cpp  MessagePage.h  MovableChip.cpp  MovableChip.h  MultiplayerPage.cpp  MultiplayerPage.h  NumericControl.cpp  NumericControl.h  Page.cpp  Page.h  ToggleControl.cpp  ToggleControl.h  UniversalInput.cpp  UniversalInput.h
TBJGameSDK/simulator/samples/IntegrationDemo/WwiseProject/GeneratedSoundBanks/: Wwise_IDs.h
TBJGameSDK/simulator/samples/SoundEngine/Android/: AkDefaultIOHookBlocking.cpp  AkDefaultIOHookBlocking.h  AkDefaultIOHookDeferred.cpp  AkDefaultIOHookDeferred.h  AkFileHelpers.cpp  AkFileHelpers.h  AkFilePackageLowLevelIOBlocking.h  AkFilePackageLowLevelIODeferred.h
TBJGameSDK/simulator/samples/SoundEngine/POSIX/: AkFileHelpers.h  AkFilePackageLowLevelIOBlocking.h
TBJGameSDK/simulator/source/SoundEngine/: MakeAllAndroid.sh
TBJGameSDK/simulator/source/StreamManager/Android/: AkStreamMgrAndroid.make  stdafx.cpp  stdafx.h
TBJGameSDK/simulator/source/StreamManager/Common/: AkDeviceBase.cpp  AkDeviceBase.h  AkDeviceBlocking.cpp  AkDeviceBlocking.h  AkDeviceDeferredLinedUp.cpp  AkDeviceDeferredLinedUp.h  AkIOMemMgr.cpp  AkIOMemMgr.h  AkStmDeferredLinedUpBase.h  AkStmDeferredLinedUpBase.inl  AkStmMemView.h  AkStreamMgr.cpp  AkStreamMgr.h  AkStreamingDefaults.h  AkTransferDeferred.cpp  AkTransferDeferred.h
TBJGameSDK/simulator/source/StreamManager/POSIX/: AkIOThread.cpp  AkIOThread.h
TBJGameSDK/simulator/source/StreamManager/Win32/: AkIOThread.cpp  AkIOThread.h  AkPlatformStreamingDefaults.h  stdafx.cpp  stdafx.h
TBJGameSDK/simulator/wasm/: build.ps1
TBJGameSDK/toolchain/: install_offical_emscripten.py  publish_jenova.py
TBJGameSDK/toolchain/emscripten/: taoflag.py  taomake.py
TBJGameSDK/toolchain/emscripten/mod-pbxproj/: taoxcode_exporter.py
TBJGameSDK/toolchain/emscripten/src/: settings.js  settings_internal.js
TBJGameSDK/toolchain/emscripten/tools/: system_libs.py
TBJGameSDK/toolchain/src/: settings.js
TBJGameSDK/toolchain/test/CXXException/: test.cpp
TBJGameSDK/toolchain/test/CXXWithoutException/: CMakeLists.txt  test.cpp
TBJGameSDK/toolchain/tool/: taoflag.py  taomake  taomake.bat  taomake.py  taopublish.py
TBJGameSDK/toolchain/tool/mod-pbxproj/: taoxcode_exporter  taoxcode_exporter.py
licenses/: LICENSE_t-game-sdk.txt  WwiseIncludes_README.md
(+31 files in other folders)
